--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,23 +6,20 @@ version: 2.1
 # See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
   ruby: circleci/ruby@0.1.2
+  node: circleci/node@2
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   build:
     docker:
       - image: cimg/ruby:2.7.1-node
-    executor: ruby/default
+
     steps:
       - checkout
-      - run:
-          name: Which bundler?
-          command: bundle -v
-      - ruby/bundle-install
+      - ruby/install-deps
       - node/install-packages:
         pkg-manager: yarn
         cache-key: "yarn.lock"
+
   test:
     parallelism: 3
     docker:
@@ -31,7 +28,7 @@ jobs:
       BUNDLE_JOBS: "3"
       BUNDLE_RETRY: "3"
       PGHOST: 127.0.0.1
-      PGUSER: "booksapp"
+      PGUSER: booksapp
       PGPASSWORD: ""
       RAILS_ENV: test
     steps:
@@ -40,23 +37,21 @@ jobs:
       - node/install-packages:
         pkg-manager: yarn
         cache-key: "yarn.lock"
-      # Here we make sure that the secondary container boots
-      # up before we run operations on the database.
       - run:
         name: Wait for DB
         command: dockerize -wait tcp://localhost:5432 -timeout 1m
       - run:
         name: Database setup
         command: bundle exec rails db:schema:load --trace
-      # Run rspec in parallel
+
       - ruby/rspec-test
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   version: 2
-  booksapp:     # The name of our workflow is "build_and_test"
-    jobs:             # The list of jobs we run as part of this workflow.
-      - build         # Run build first.
-      - test:         # Then run test,
-          requires:   # Test requires that build passes for it to run.
+  booksapp:
+    jobs:
+      - build
+      - test:
+          requires:
             - build
