--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,11 +24,16 @@ jobs:
     parallelism: 3
     docker:
       - image: cimg/ruby:2.7.1-node
+      - image: circleci/postgres:9.5-alpine
+        environment: # add POSTGRES environment variables.
+          POSTGRES_USER: testingapp
+          POSTGRES_DB: testingapp_development
+          POSTGRES_PASSWORD: ""
     environment:
       BUNDLE_JOBS: "3"
       BUNDLE_RETRY: "3"
       PGHOST: 127.0.0.1
-      PGUSER: booksapp
+      PGUSER: testingapp
       PGPASSWORD: ""
       RAILS_ENV: test
     steps:
