--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,62 +1,47 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-
-# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
-# See: https://circleci.com/docs/2.0/orb-intro/
-orbs:
-  ruby: circleci/ruby@1.0
-  node: circleci/node@2
-
+version: 2
 jobs:
   build:
+    parallelism: 1
+    working_directory: ~/testingapp
     docker:
+      # this is important to use proper image with browsers support
       - image: cimg/ruby:2.7.1-node
-
-    steps:
-      - checkout
-      - ruby/install-deps
-      - node/install-packages:
-          pkg-manager: yarn
-          cache-key: "yarn.lock"
-
-  test:
-    parallelism: 3
-    docker:
-      - image: cimg/ruby:2.7.1-node
+        environment:
+          PGHOST: 127.0.0.1
+          PGUSER: testingapp
+          RAILS_ENV: test
       - image: circleci/postgres:9.5-alpine
-        environment: # add POSTGRES environment variables.
-          POSTGRES_USER: testingapp
-          POSTGRES_DB: testingapp_development
+        environment:
+          POSTGRES_DB: testingapp_test
           POSTGRES_PASSWORD: ""
-    environment:
-      BUNDLE_JOBS: "3"
-      BUNDLE_RETRY: "3"
-      PGHOST: 127.0.0.1
-      PGUSER: testingapp
-      PGPASSWORD: ""
-      RAILS_ENV: test
+          POSTGRES_USER: testingapp
+      - image: redis:3.2.7
     steps:
       - checkout
-      - ruby/install-deps
-      - node/install-packages:
-          pkg-manager: yarn
-          cache-key: "yarn.lock"
-      - run:
-          name: Wait for DB
-          command: dockerize -wait tcp://localhost:5432 -timeout 1m
-      - run:
-          name: Database setup
-          command: bundle exec rails db:schema:load --trace
 
-      - ruby/rspec-test
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  version: 2
-  booksapp:
-    jobs:
-      - build
-      - test:
-          requires:
-            - build
+      # Restore bundle cache
+      - type: cache-restore
+        # remove space between { {
+        key: testingapp-{ { checksum "Gemfile.lock" }}
+
+      # Bundle install dependencies
+      - run: bundle install --path vendor/bundle
+
+      # Store bundle cache
+      - type: cache-save
+        # remove space between { {
+        key: testingapp-{ { checksum "Gemfile.lock" }}
+        paths:
+          - vendor/bundle
+
+      # Database setup
+      - run: bundle exec rake db:create
+      - run: bundle exec rake db:schema:load
+
+      # Run rspec in parallel
+      - type: shell
+        command: |
+          bundle exec rspec --profile 10 \
+                            --format RspecJunitFormatter \
+                            --out /tmp/test-results/rspec.xml \
+                            --format progress
