--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,3 +42,6 @@ jobs:
         command: |
           bundle exec rspec --profile 10 \
                             --format progress
+
+      - type: store_test_results
+        path: /tmp/test-results
